--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: aqua;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTng91Dt8luBu2Ijs8D2EfpshZUphWQkRMFgg&s);
+  background-size: cover;
 }
 
 code {
@@ -13,6 +16,33 @@ code {
 }
 .App{ 
   text-align: center;
-  background-color: aqua;
+  background-color: purple;
   font-size: 30px;
+  font-weight: bolder;
+}
+.button{
+  background-color: aqua; 
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bolder;
+  font-size: 2opx;
+
+}
+
+.input {
+  color: black;
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid purple;
+  border-radius: 4px;
+  font-size: 16px;
+  
 }
