--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,16 @@ code {
 
 .input {
   color: black;
-  width: 20%;
+  width: 10%;
   padding: 8px 10px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid purple;
+  border: 5px solid purple;
   border-radius: 4px;
   font-size: 16px;
   
 }
+ .list{
+  color: aliceblue;
+ }
+ 
